# tf2-keras-surgeon

./: setup.cfg
tests/: test_surgeon.py  test_utils.py
tf2kerassurgeon/: surgeon.py
