[metadata]
name = tf2_keras_surgeon
description = A library for performing network surgery on trained tensorflow 2 keras models.
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs-jsi/tf2-keras-surgeon
author = Ben Whetton, Raukk
maintainer = Jure Vreca
maintainer_email = jure.vreca@ijs.si
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    examples
